--- a/login.html
+++ b/login.html
@@ -10,8 +10,11 @@
 </head>
 <body>
 
+    <header>
+    <div class="container">
     <nav>
-        <div class="container">
+        
+
 
              <div class="logo"><h1>Salba</h1></div>
  
@@ -29,6 +32,8 @@
         </div>
        
     </nav>
+ </header>
+
 
 
     <script>
